# Sonix

./: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  FORMAT_DETECTION_INVESTIGATION_SUMMARY.md  MP3_DECODER_TEST_ISSUE_REPORT.md  NATIVE_LIBRARY_DISTRIBUTION.md  README.md  TEST_FIXES_SUMMARY.md  analysis_options.yaml  debug_wav_test.dart  ffigen.yaml  libsonix_native.dylib  libswresample.dylib  pubspec.yaml
android/: build.gradle
doc/: API_REFERENCE.md  ARCHITECTURE_REFACTOR_PLAN.md  CHUNKED_PROCESSING_CONFIG.md  CHUNKED_PROCESSING_GUIDE.md  CHUNKED_PROCESSING_MIGRATION.md  CHUNKED_PROCESSING_PERFORMANCE.md  (+7 more)
native/: CMakeLists.txt  README.md  build.bat  build.sh
native/android/: CMakeLists.txt
native/build_faad2/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mp4_container_test.vcxproj  mp4_container_test.vcxproj.filters  mp4_faad2_test.vcxproj  mp4_faad2_test.vcxproj.filters  mp4_integration_test.vcxproj  mp4_integration_test.vcxproj.filters  mp4_real_file_test.vcxproj  mp4_real_file_test.vcxproj.filters  sonix_native.sln  sonix_native.vcxproj  sonix_native.vcxproj.filters
native/build_faad2/Debug/: mp4_faad2_test.exp  mp4_faad2_test.lib  mp4_integration_test.exp  mp4_real_file_test.exp  mp4_real_file_test.lib  sonix_native.exp
native/build_faad2/mp4_container_test.dir/Debug/: mp4_container_test.exe.recipe  mp4_container_test.ilk
native/build_faad2/mp4_container_test.dir/Debug/mp4_cont.2B387180.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_faad2/mp4_faad2_test.dir/Debug/: mp4_faad2_test.exe.recipe  mp4_faad2_test.ilk
native/build_faad2/mp4_faad2_test.dir/Debug/mp4_faad2_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_faad2/mp4_integration_test.dir/Debug/: mp4_integration_test.exe.recipe  mp4_integration_test.ilk
native/build_faad2/mp4_integration_test.dir/Debug/mp4_inte.42811FC7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_faad2/mp4_real_file_test.dir/Debug/: mp4_real_file_test.exe.recipe  mp4_real_file_test.ilk
native/build_faad2/mp4_real_file_test.dir/Debug/mp4_real.47672F54.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_faad2/sonix_native.dir/Debug/: sonix_native.dll.recipe  sonix_native.ilk
native/build_faad2/sonix_native.dir/Debug/sonix_native.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_faad2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
native/build_faad2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
native/build_faad2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_faad2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
native/build_test/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mp4_container_test.vcxproj  mp4_container_test.vcxproj.filters  mp4_integration_test.vcxproj  mp4_integration_test.vcxproj.filters  sonix_native.sln  sonix_native.vcxproj  sonix_native.vcxproj.filters
native/build_test/Debug/: mp4_integration_test.exp  mp4_integration_test.lib  sonix_native.exp  sonix_native.lib
native/build_test/mp4_container_test.dir/Debug/: mp4_container_test.exe.recipe  mp4_container_test.ilk
native/build_test/mp4_container_test.dir/Debug/mp4_cont.D2D606EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_test/mp4_integration_test.dir/Debug/: mp4_integration_test.exe.recipe  mp4_integration_test.ilk
native/build_test/mp4_integration_test.dir/Debug/mp4_inte.F60D8CDC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_test/sonix_native.dir/Debug/: sonix_native.dll.recipe  sonix_native.ilk
native/build_test/sonix_native.dir/Debug/sonix_native.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sonix_native.lastbuildstate
native/build_test/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
native/build_test/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
native/ios/: sonix_native.podspec
native/linux/: CMakeLists.txt
native/macos/: CMakeLists.txt  libavcodec.dylib  libavfilter.9.dylib  libavfilter.dylib  libavformat.dylib  libswresample.dylib  libswscale.7.dylib  libswscale.dylib
native/macos/include/: libavcodec  libavformat  libavutil  libswresample
native/src/: MP4_CONTAINER_README.md  MP4_FAAD2_README.md  REAL_MP4_TEST_RESULTS.md  ffmpeg_wrapper.c  mp4_container.c  mp4_container.h  mp4_container_test.c  mp4_decoder.c  mp4_decoder.h  mp4_integration_test.c  sonix_ffmpeg.c  sonix_native.c  sonix_native.h  sonix_native_stub.c  sonix_native_stub.c.in  stb_vorbis_wrapper.c
native/src/aac/: aac_decoder.c  aac_decoder.h
native/src/minimp4/: minimp4.h
native/src/opus/: opus_stub.h
native/src/stb_vorbis/: stb_vorbis_impl.c
native/windows/: CMakeLists.txt  sonix_native.def
windows/: CMakeLists.txt  sonix_plugin.cpp
windows/flutter/ephemeral/: generated_config.cmake
windows/include/sonix/: sonix_plugin.h
(+432 files in other folders)
